--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:description" content="You're invited to celebrate Nikunj & Sukriti's wedding day. Join us for this special celebration of love.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:image" content="https://nikunjgupta.dev/evite/pages/p1.jpg">
+    <!-- <meta property="og:image" content="pages/og_image.jpg">
     <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image:height" content="630"> -->
     <meta property="og:image:alt" content="Nikunj & Sukriti Wedding Invitation">
     <meta property="og:site_name" content="Nikunj & Sukriti Wedding">
     <meta property="og:locale" content="en_US">
