--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Nikunj & Sukriti Wedding Invitation</title>
     <meta name="description" content="You're invited to celebrate Nikunj & Sukriti's wedding day. Join us for this special celebration of love.">
