--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                         We joyfully invite you to celebrate our wedding day.
                         Your presence would make our special day even more meaningful.
                     </p>
+                    <div class="play-button-container">
+                        <button id="playButton" class="play-button">
+                            <span class="play-icon">▶</span>
+                            <span class="play-text">View Invitation</span>
+                        </button>
+                    </div>
                     <!-- <div class="swipe-instruction">
                         <p>Swipe or click to view invitation →</p>
                     </div> -->
@@ -126,6 +132,7 @@
     <!-- Background Audio -->
     <audio id="backgroundAudio" preload="auto" loop>
         <source src="audio/audio.mp3" type="audio/mpeg">
+        <source src="audio/audio.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
 
