--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <img id="image3" src="pages/p3.jpg" alt="Image 3" class="gallery-image">
             <img id="image4" src="pages/p4.jpg" alt="Image 4" class="gallery-image">
             <img id="image5" src="pages/p5.jpg" alt="Image 5" class="gallery-image">
+            <img id="image5" src="pages/p5.5.jpg" alt="Image 5.5" class="gallery-image">
             <img id="image6" src="pages/p6.jpg" alt="Image 6" class="gallery-image">
             <img id="image7" src="pages/p7.jpg" alt="Image 7" class="gallery-image">
             
@@ -110,6 +111,15 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="venue-item">
+                            <h3 class="venue-name">Badri Vishal Weddingpoint</h3>
+                            <a href="https://maps.app.goo.gl/Fy5uB8ticbap4qK8A" target="_blank" class="venue-link">
+                                <div class="venue-link-content">
+                                    <span class="map-icon">📍</span>
+                                    <span class="link-text">View on Google Maps</span>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -126,6 +136,7 @@
             <span class="dot" data-slide="6"></span>
             <span class="dot" data-slide="7"></span>
             <span class="dot" data-slide="8"></span>
+            <span class="dot" data-slide="9"></span>
         </div>
     </div>
 
