--- a/sn/index.html
+++ b/sn/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Sukriti & Nikunj Invitation">
+    <meta property="og:description" content="You're invited to celebrate Sukriti & Nikunj's wedding day. Join us for this special celebration of love.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <!-- <meta property="og:image" content="pages/og_image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630"> -->
+    <meta property="og:image:alt" content="Sukriti & Nikunj Wedding Invitation">
+    <meta property="og:site_name" content="Sukriti & Nikunj Wedding">
+    <meta property="og:locale" content="en_US">
     <title>Video Player</title>
     <style>
         * {
