--- a/sn/index.html
+++ b/sn/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./../favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Sukriti & Nikunj Invitation">
     <meta property="og:description" content="You're invited to celebrate Sukriti & Nikunj's wedding day. Join us for this special celebration of love.">
